Fixed alignment of the info section

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --custom-margin: 10px;
     --txt-color: white;
     --custom-padding: 10px;
-    --custom-bg: #ebebeb;
+    --custom-bg: #f3f1f1;
 }
 
 * {
@@ -56,8 +56,6 @@
 
 .form {
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
     background-color: var(--txt-color);
     height: 100vh;
@@ -79,10 +77,22 @@
     height: 100vh;
 }
 
+input[type=text], input[type=email], input[type=number], input[type=password] {
+    border: 1px solid var(--accent-color);
+    padding: 3px;
+    width: 200px;
+}
+
+input[type=text]:focus, input[type=email]:focus, input[type=number]:focus, input[type=password]:focus {
+    padding: 5px;
+}
+
 .info {
     padding: var(--custom-padding);
-    height: 100vh;
-    width: 100vh;
+}
+
+label {
+    font-size: small;
 }
 
 .one, .two, .three {
@@ -95,6 +105,8 @@ button {
     color: var(--txt-color);
     margin: var(--custom-margin);
     padding: var(--custom-padding);
+    font-weight: 900;
+    border-color: var(--accent-color);
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
@@ -102,16 +114,22 @@ button {
     -o-border-radius: 10px;
 }
 
+button:hover {
+    color: var(--accent-color);
+    background-color: var(--txt-color);
+}
+
 a {
     text-decoration: none;
     color: var(--accent-color);
-    font-weight: 900;
+    font-weight: bolder;
 }
 
 .end {
     display: flex;
     background-color: var(--custom-bg);
     padding: var(--custom-padding);
+    font-weight: bolder;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
